--- a/main.css
+++ b/main.css
@@ -14,4 +14,9 @@ color: #69CBBB;
    color: #33a8ff;
    text-align: right;
    border: 3px dotted #ff008d;
-  }
+  }p {
+ padding: 20px;
+ color: #33a8ff;
+ text-align: center;
+ border: 3px dotted #ff008d;
+}
