--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ color: #150812;
 
   p {
  padding: 20px;
- color: #33a8ff;
+ color: #ff7f50;
  text-align: center;
  border: 3px dotted #ff008d;
 }
